RESOLVED FIXED191451
Extensions3DOpenGLES.h: warning: 'blitFramebuffer' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
https://bugs.webkit.org/show_bug.cgi?id=191451
Summary Extensions3DOpenGLES.h: warning: 'blitFramebuffer' overrides a member functi...
Fujii Hironori
Reported 2018-11-08 19:26:46 PST
Clang-cl 7.0 reports following compilation warnings while building WebKit WinCairo port. > [4903/6223] Building CXX object Source\WebCore\CMakeFiles\WebCore.dir\platform\graphics\opengl\Extensions3DOpenGLES.cpp.obj > In file included from ..\..\Source\WebCore\platform\graphics\opengl\Extensions3DOpenGLES.cpp:31: > ..\..\Source\WebCore\platform\graphics\opengl/Extensions3DOpenGLES.h(80,18): warning: 'blitFramebuffer' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual void blitFramebuffer(long srcX0, long srcY0, long srcX1, long srcY1, long dstX0, long dstY0, long dstX1, long dstY1, unsigned long mask, unsigned long filter); > ^ > ..\..\Source\WebCore\platform\graphics\Extensions3D.h(254,18): note: overridden virtual function is here > virtual void blitFramebuffer(long srcX0, long srcY0, long srcX1, long srcY1, long dstX0, long dstY0, long dstX1, long dstY1, unsigned long mask, unsigned long filter) = 0; > ^ > In file included from ..\..\Source\WebCore\platform\graphics\opengl\Extensions3DOpenGLES.cpp:31: > ..\..\Source\WebCore\platform\graphics\opengl/Extensions3DOpenGLES.h(81,18): warning: 'renderbufferStorageMultisample' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual void renderbufferStorageMultisample(unsigned long target, unsigned long samples, unsigned long internalformat, unsigned long width, unsigned long height); > ^ > ..\..\Source\WebCore\platform\graphics\Extensions3D.h(257,18): note: overridden virtual function is here > virtual void renderbufferStorageMultisample(unsigned long target, unsigned long samples, unsigned long internalformat, unsigned long width, unsigned long height) = 0; > ^ > In file included from ..\..\Source\WebCore\platform\graphics\opengl\Extensions3DOpenGLES.cpp:31: > ..\..\Source\WebCore\platform\graphics\opengl/Extensions3DOpenGLES.h(82,18): warning: 'insertEventMarkerEXT' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual void insertEventMarkerEXT(const String&); > ^ > ..\..\Source\WebCore\platform\graphics\Extensions3D.h(274,18): note: overridden virtual function is here > virtual void insertEventMarkerEXT(const String&) = 0; > ^ > In file included from ..\..\Source\WebCore\platform\graphics\opengl\Extensions3DOpenGLES.cpp:31: > ..\..\Source\WebCore\platform\graphics\opengl/Extensions3DOpenGLES.h(83,18): warning: 'pushGroupMarkerEXT' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual void pushGroupMarkerEXT(const String&); > ^ > ..\..\Source\WebCore\platform\graphics\Extensions3D.h(275,18): note: overridden virtual function is here > virtual void pushGroupMarkerEXT(const String&) = 0; > ^ > In file included from ..\..\Source\WebCore\platform\graphics\opengl\Extensions3DOpenGLES.cpp:31: > ..\..\Source\WebCore\platform\graphics\opengl/Extensions3DOpenGLES.h(84,18): warning: 'popGroupMarkerEXT' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual void popGroupMarkerEXT(void); > ^ > ..\..\Source\WebCore\platform\graphics\Extensions3D.h(276,18): note: overridden virtual function is here > virtual void popGroupMarkerEXT(void) = 0; > ^ > In file included from ..\..\Source\WebCore\platform\graphics\opengl\Extensions3DOpenGLES.cpp:31:
Attachments
Patch (6.05 KB, patch)
2018-11-08 19:40 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2018-11-08 19:40:23 PST
Don Olmstead
Comment 2 2018-11-09 09:54:56 PST
LGTM!
WebKit Commit Bot
Comment 3 2018-11-09 10:42:34 PST
Comment on attachment 354305 [details] Patch Clearing flags on attachment: 354305 Committed r238044: <https://trac.webkit.org/changeset/238044>
WebKit Commit Bot
Comment 4 2018-11-09 10:42:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-11-09 10:43:30 PST
Note You need to log in before you can comment on or make changes to this bug.