Source/WebCore/platform/graphics/opengl/Extensions3DOpenGLES.cpp
@@ -206,11 +206,6 @@ int Extensions3DOpenGLES::getGraphicsResetStatusARB()
     return false;
 }
 
-void Extensions3DOpenGLES::setEXTContextLostCallback(std::unique_ptr<GraphicsContext3D::ContextLostCallback> callback)
-{
-    m_contextLostCallback = WTFMove(callback);
-}
-
 void Extensions3DOpenGLES::readnPixelsEXT(int x, int y, GC3Dsizei width, GC3Dsizei height, GC3Denum format, GC3Denum type, GC3Dsizei bufSize, void *data)
 {
     if (m_glReadnPixelsEXT) {
